<resources>
    <string name="app_name">Dog-Date</string>
    <string name="steat_location">turn on location</string>
    <string-array name="states">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="welcome">Welcome To</string>
    <string name="dog_date">DOG DATE!</string>
    <string name="home_image">home_image</string>
    <string name="right_icon">right_icon</string>
    <string name="lets_begin_btn">Let\'s Begin!</string>
    <string name="left_icon">left_icon</string>
    <string name="dog_name_text_view">Your Dog\'s name:</string>
    <string name="dog_name_edit_text">Enter your dog\'s name</string>
    <string name="dog_breed_text_view">Your Dog Breed:</string>
    <string name="preference_breed_text_view">Preference Dog Breed:</string>
    <string name="dog_gender_text_view">Gender of Dog:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dog_age_text_view">Your Dog\'s age:</string>
    <string name="dog_age_edit_text">Enter your dog\'s age</string>
    <string name="dog_size_text_view">Size of Dog:</string>
    <string name="preference_dog_size_text_view">preference Size:</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="next_button_text">next</string>
    <string name="create_your_dogs_profile">Create your dog\'s profile</string>
    <string name="menu_home">Home</string>
    <string name="menu_dog_profile">Dog Profile</string>
    <string name="menu_owner_profile">Owner Profile</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_logout">Logout</string>
    <string name="nav_header_title">Dog Date</string>
    <string name="nav_header_desc">Dog Date Logo</string>
    <string name="bar_Welcome">Welcome</string>
    <string name="bar_Login_Signup">Login or Signup</string>
    <string name="bar_DogProfile">Dog Profile</string>
    <string name="bar_OwnerProfile">Owner Profile</string>
    <string name="bar_ProfilePage">Profile Page</string>
    <string name="dog_bio">Dog Bio:</string>
    <string name="dog_bio_edit_text">Give a bio for your dog!</string>
    <string name="dog_breed_hint">Start typing your dog\'s breed!</string>
    <string name="todays_matches">Today\'s Matches!</string>
    <string name="today_s_matches">Today\'s Matches!</string>
    <string name="nav_home">Home</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in_email">Email</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="signup_create_new_account">SignUp - Create New Account</string>
    <string name="already_have_account_log_in">Already have account? Log In</string>
    <string name="select_user">Select User</string>
    <string name="select_match">Select Match</string>
    <string name="add">Add</string>
    <string name="logout_chat">Logout Chat</string>
    <string name="messages">Messages</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="create_new_profile">Create New Profile</string>
    <string name="app_uname">app_uName</string>
    <string name="type_your_message">Type your message</string>
    <string name="user_image">User Image</string>
    <string name="current_messages">Current Messages</string>
    <string name="currently_online">Currently Online</string>
    <string name="bio_text">Introduce yourself!:</string>
    <string name="bio_hint">Write a small introduction!</string>
    <string name="your_profile">Your Profile</string>
    >>>>>>> 7b7f3158dc9d2c608bfb3b336db69d4dc1464229
</resources>