<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:orientation="vertical"
    android:background="@drawable/dd_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
        android:id="@+id/leftIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/dd_icon_small"
        android:contentDescription="@string/left_icon"/>

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/coiny"
            android:gravity="center"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/bronze"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/rightIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="25dp"
            android:src="@drawable/dd_icon_small"
            android:contentDescription="@string/right_icon"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/coiny"
        android:text="@string/dog_date"
        android:textColor="@color/bronze"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/home_image"
        android:layout_width="wrap_content"
        android:layout_height="251dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/home_image"
        android:gravity="center"
        android:src="@drawable/home_img"
        app:shapeAppearanceOverlay="@style/Rounded" />

    <Button
        android:id="@+id/beginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/custom_button"
        android:text="@string/lets_begin_btn"
        android:textSize="20sp"
        android:layout_marginTop="30dp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include
            layout="@layout/main_nav_drawer"/>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>