<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/dd_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/coiny"
            android:text="@string/dog_date"
            android:textColor="@color/bronze"
            android:textAlignment="center"
            android:textSize="@dimen/font50"
            android:textStyle="bold"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/home_image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/imageHeight"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_20"
            android:contentDescription="@string/home_image"
            android:gravity="center"
            android:src="@drawable/home_img"
            app:shapeAppearanceOverlay="@style/Rounded" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:textSize="20sp"
            android:hint="@string/log_in_email"
            android:inputType="textEmailAddress"/>


        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:textSize="@dimen/sp_20"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:onClick="LogIn"/>

        <Button
            android:id="@+id/b_logIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:textSize="@dimen/sp_20"
            android:text="Log In"
            android:onClick="LogIn"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="@dimen/dp_300"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include
            layout="@layout/main_nav_drawer"/>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>